@@ -1,3 +1,9 @@
+globus-ftp-client (8.35-1+gt6.@distro@) @distro@; urgency=low
+
+  * Remove some redundent tests to reduce test time
+
+ -- Globus Toolkit <support@globus.org>  Fri, 24 Mar 2017 16:21:26 -0400
+
 globus-ftp-client (8.34-1+gt6.@distro@) @distro@; urgency=low
 
   * add FTP_TEST_RESTART_AFTER_RANGE=n to force restarts after n range markers for restart points 22 and 24 (RETR_RESPONSE and STOR_RESPONSE)
